Refactor episodesRecentWatched also added next episodes watched older then 30 days